--- a/bin/copper/views/webapps/EditWebAppViewDark.fxml
+++ b/bin/copper/views/webapps/EditWebAppViewDark.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.HTMLEditor?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="703.0" prefWidth="986.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="copper.controllers.webapps.EditWebAppController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="703.0" prefWidth="986.0" style="-fx-background-color: #202020;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="copper.controllers.webapps.EditWebAppController">
    <children>
       <JFXButton fx:id="createAppBtn" layoutX="309.0" layoutY="643.0" onAction="#updateApp" style="-fx-background-color: #bc6f33;" text="Update" textFill="WHITE">
          <font>
