--- a/src/copper/views/dialogs/ComfirmBoxDark.fxml
+++ b/src/copper/views/dialogs/ComfirmBoxDark.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="159.0" prefWidth="510.0" style="-fx-background-color: #202020;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="copper.controllers.dialogs.ComfirmController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="159.0" prefWidth="510.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="copper.controllers.dialogs.ComfirmController">
    <children>
       <JFXButton fx:id="yesBtn" layoutX="149.0" layoutY="107.0" onAction="#setTrue" prefHeight="31.0" prefWidth="77.0" style="-fx-background-color: #dc3545;" text="Yes" textFill="WHITE">
          <font>
@@ -17,6 +17,6 @@
             <Font size="15.0" />
          </font>
       </JFXButton>
-      <Label fx:id="message" layoutX="84.0" layoutY="57.0" text="Label" textFill="#b6b6b6" />
+      <Label fx:id="message" layoutX="84.0" layoutY="57.0" text="Label" />
    </children>
 </Pane>
